activity_splash_screen.xml and login Design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="light_grey">#C3C3C3</color>
     <color name="Dark_grey">#4A4A4A</color>
     <color name="teal_500">#009688</color>
+    <color name="lightblue">#0090FF</color>
 </resources>
