--- a/app/src/main/res/values/Styles.xml
+++ b/app/src/main/res/values/Styles.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.ProjectManager.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
     <style name="taH2">
         <item name="android:textSize">62sp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="fontFamily">@font/tonnelier_book</item>
+        <item name="fontFamily">@font/tonnelier_regular</item>
     </style>
 
     <style name="taH3" parent="taH2">
@@ -27,9 +22,41 @@
     <style name="taH6" parent="taH2">
         <item name="android:textSize">20sp</item>
     </style>
+    <style name="taBody" parent="taH2">
+        <item name="android:textSize">16sp</item>
+    </style>
 
-    <style name="taH3BC_white" parent="taH3">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/white</item>
+    <style name="taH3_B_C_lightblue" parent="taH3">
+        <item name="fontFamily">@font/tonnelier_bold</item>
+        <item name="android:textColor">@color/lightblue</item>
+    </style>
+    <style name="taH4_SB_teal500" parent="taH4">
+        <item name="fontFamily">@font/tonnelier_semibold</item>
+        <item name="android:textColor">@color/teal_500</item>
+    </style>
+    <style name="taH6_B_grey" parent="taH6">
+        <item name="android:textColor">@color/grey</item>
+        <item name="fontFamily">@font/tonnelier_bold</item>
+    </style>
+    <style name="taH5_R_lightblue" parent="taH5">
+        <item name="android:fontFamily">@font/tonnelier_regular</item>
+        <item name="android:textColor">@color/lightblue</item>
+    </style>
+
+
+
+
+
+
+
+    <style name="sa_bg_null">
+        <item name="backgroundTint">@null</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+    <style name="sa_bg_white_stroke_lightblue">
+        <item name="backgroundTint">@color/white</item>
+        <item name="cornerRadius">5dp</item>
+        <item name="strokeColor">@color/teal_500</item>
+        <item name="strokeWidth">1dp</item>
     </style>
 </resources>
