--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,13 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login.LoginActivity">
+    tools:context=".login.ui.LoginActivity">
 
     <TextView
         android:id="@+id/tvAppName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:text="@string/app_name"
         android:textAppearance="@style/taH4_SB_teal500"
         app:layout_constraintBottom_toTopOf="@+id/ivProjectManager"
@@ -72,7 +72,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="@dimen/_20sdp"
         android:paddingVertical="10dp"
         android:text="@string/sign_up"
         android:textAppearance="@style/taH5_R_lightblue"
@@ -86,9 +86,10 @@
         android:id="@+id/ivProjectManager"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:alpha=".7"
         app:layout_constraintBottom_toTopOf="@+id/tvGetStartedlabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
