--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <activity
         android:id="@+id/loginActivity"
-        android:name="com.example.projectmanager.login.LoginActivity"
+        android:name="com.example.projectmanager.login.ui.LoginActivity"
         android:label="activity_login"
         tools:layout="@layout/activity_login" />
 </navigation>
