home fragment, new fonts

--- a/app/src/main/res/drawable/bg_gr_stroke_white_corner_rds.xml
+++ b/app/src/main/res/drawable/bg_gr_stroke_white_corner_rds.xml
@@ -7,6 +7,6 @@
         android:centerColor="#009688"
         android:type="linear">
     </gradient>
-    <corners android:radius="10dp"/>
+    <corners android:radius="@dimen/_7sdp"/>
 
 </shape>
