--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
         android:text="@string/app_name"
-        android:textAppearance="@style/taH4_SB_teal500"
+        android:textAppearance="@style/ta_heading_cayan"
+        android:fontFamily="@font/roboto_bold"
         app:layout_constraintBottom_toTopOf="@+id/ivProjectManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,9 +24,10 @@
         android:id="@+id/tvGetStartedlabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_5sdp"
         android:gravity="center"
         android:text="@string/lets_get_started"
-        android:textAppearance="@style/taH6_B_grey"
+        android:textAppearance="@style/ta_sub_heading_grey"
         app:layout_constraintBottom_toTopOf="@+id/tvGetStartedDetails"
         app:layout_constraintEnd_toEndOf="@+id/ivProjectManager"
         app:layout_constraintStart_toStartOf="@+id/ivProjectManager"
@@ -35,48 +37,46 @@
         android:id="@+id/tvGetStartedDetails"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_15sdp"
         android:gravity="center"
         android:text="@string/collaborate_and_plan__"
-        android:textAppearance="@style/taBody"
+        android:textAppearance="@style/ta_body"
         app:layout_constraintBottom_toTopOf="@+id/btnSignin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvGetStartedlabel" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnSignin"
         style="@style/sa_bg_null"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="20dp"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_35sdp"
+        android:layout_marginEnd="@dimen/_15sdp"
+        android:fontFamily="@font/roboto_bold"
         android:background="@drawable/bg_gr_stroke_white_corner_rds"
-        android:maxWidth="0dp"
-        android:maxHeight="0dp"
         android:text="@string/sign_in"
-        android:textAppearance="@style/taH5"
+        android:textAppearance="@style/ta_heading"
         app:layout_constraintBottom_toTopOf="@+id/btnSignup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvGetStartedDetails" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnSignup"
         style="@style/sa_bg_white_stroke_lightblue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_15sdp"
         android:layout_marginBottom="@dimen/_20sdp"
-        android:paddingVertical="10dp"
         android:text="@string/sign_up"
-        android:textAppearance="@style/taH5_R_lightblue"
-        android:textColor="@color/teal_500"
+        android:textAppearance="@style/ta_heading"
+        android:textColor="@color/cayan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,9 +87,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/_20sdp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/_24sdp"
         android:layout_marginEnd="@dimen/_20sdp"
-        android:alpha=".7"
+        android:alpha=".8"
         app:layout_constraintBottom_toTopOf="@+id/tvGetStartedlabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
