--- a/app/src/main/res/values/Styles.xml
+++ b/app/src/main/res/values/Styles.xml
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="taH2">
+    <style name="ta62sp">
         <item name="android:textSize">62sp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="fontFamily">@font/tonnelier_regular</item>
+        <item name="fontFamily">@font/roboto_medium</item>
     </style>
 
-    <style name="taH3" parent="taH2">
+    <style name="ta48sp" parent="ta62sp">
         <item name="android:textSize">48sp</item>
     </style>
 
-    <style name="taH4" parent="taH2">
+    <style name="ta34sp" parent="ta62sp">
         <item name="android:textSize">34sp</item>
     </style>
 
-    <style name="taH5" parent="taH2">
+    <style name="ta_heading">
         <item name="android:textSize">24sp</item>
+        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="taH6" parent="taH2">
+    <style name="ta_sub_heading" parent="ta62sp">
         <item name="android:textSize">20sp</item>
     </style>
-    <style name="taBody" parent="taH2">
+    <style name="ta_body" parent="ta62sp">
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="taH3_B_C_lightblue" parent="taH3">
-        <item name="fontFamily">@font/tonnelier_bold</item>
+    <style name="taH3_B_C_lightblue" parent="ta48sp">
+        <item name="fontFamily">@font/roboto_bold</item>
         <item name="android:textColor">@color/lightblue</item>
     </style>
-    <style name="taH4_SB_teal500" parent="taH4">
-        <item name="fontFamily">@font/tonnelier_semibold</item>
-        <item name="android:textColor">@color/teal_500</item>
+    <style name="ta_heading_cayan" parent="ta_heading">
+        <item name="fontFamily">@font/roboto_condensed</item>
+        <item name="android:textColor">@color/cayan</item>
     </style>
-    <style name="taH6_B_grey" parent="taH6">
+    <style name="ta_sub_heading_grey" parent="ta_sub_heading">
         <item name="android:textColor">@color/grey</item>
-        <item name="fontFamily">@font/tonnelier_bold</item>
+        <item name="fontFamily">@font/roboto_bold</item>
     </style>
-    <style name="taH5_R_lightblue" parent="taH5">
-        <item name="android:fontFamily">@font/tonnelier_regular</item>
+    <style name="taH5_R_lightblue" parent="ta_heading">
+        <item name="android:fontFamily">@font/roboto_medium</item>
         <item name="android:textColor">@color/lightblue</item>
     </style>
 
@@ -49,14 +51,20 @@
 
 
 
-    <style name="sa_bg_null">
+    <style name="sa_bg_null" parent="btn_style">
         <item name="backgroundTint">@null</item>
         <item name="android:textAllCaps">false</item>
     </style>
-    <style name="sa_bg_white_stroke_lightblue">
+    <style name="sa_bg_white_stroke_lightblue" parent="btn_style">
         <item name="backgroundTint">@color/white</item>
         <item name="cornerRadius">5dp</item>
-        <item name="strokeColor">@color/teal_500</item>
+        <item name="strokeColor">@color/cayan</item>
         <item name="strokeWidth">1dp</item>
+    </style>
+    <style name="btn_style">
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="cornerRadius">@dimen/_7sdp</item>
+        <item name="elevation">0dp</item>
     </style>
 </resources>
