--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,6 @@
     <color name="grey">#808080</color>
     <color name="light_grey">#C3C3C3</color>
     <color name="Dark_grey">#4A4A4A</color>
-    <color name="teal_500">#009688</color>
+    <color name="cayan">#009688</color>
     <color name="lightblue">#0090FF</color>
 </resources>
