--- a/app/src/main/res/values/Styles.xml
+++ b/app/src/main/res/values/Styles.xml
@@ -17,7 +17,7 @@
 
     <style name="ta_heading">
         <item name="android:textSize">24sp</item>
-        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="android:fontFamily">@font/roboto_bold</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
@@ -32,7 +32,7 @@
         <item name="fontFamily">@font/roboto_bold</item>
         <item name="android:textColor">@color/lightblue</item>
     </style>
-    <style name="ta_heading_cayan" parent="ta_heading">
+    <style name="ta_heading_cayan" parent="ta34sp">
         <item name="fontFamily">@font/roboto_condensed</item>
         <item name="android:textColor">@color/cayan</item>
     </style>
@@ -43,6 +43,9 @@
     <style name="taH5_R_lightblue" parent="ta_heading">
         <item name="android:fontFamily">@font/roboto_medium</item>
         <item name="android:textColor">@color/lightblue</item>
+    </style>
+    <style name="ta_heading_grey" parent="ta_heading">
+        <item name="android:textColor">@color/grey</item>
     </style>
 
 
@@ -55,11 +58,10 @@
         <item name="backgroundTint">@null</item>
         <item name="android:textAllCaps">false</item>
     </style>
-    <style name="sa_bg_white_stroke_lightblue" parent="btn_style">
+    <style name="sa_bg_white_stroke_cayan" parent="btn_style">
         <item name="backgroundTint">@color/white</item>
-        <item name="cornerRadius">5dp</item>
         <item name="strokeColor">@color/cayan</item>
-        <item name="strokeWidth">1dp</item>
+        <item name="strokeWidth">@dimen/_1sdp</item>
     </style>
     <style name="btn_style">
         <item name="android:insetTop">0dp</item>
