--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,8 +10,8 @@
         android:id="@+id/tvSignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:text="@string/sign_up"
         android:textAppearance="@style/ta_heading_grey"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,8 +22,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:gravity="center"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:gravity="start"
         android:text="@string/enter_your_name_id____"
         android:textAppearance="@style/ta_body"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,46 +33,60 @@
     <EditText
         android:id="@+id/etName"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_30sdp"
+        android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_20sdp"
-        android:hint="@string/enter_you_name"
-        android:textAppearance="@style/ta_body"
+        android:layout_marginTop="@dimen/_30sdp"
         android:autofillHints="name"
+        android:hint="@string/enter_you_name"
+        android:inputType="textPersonName"
+        android:textAppearance="@style/ta_body"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taDescription"
-        android:inputType="textPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/taDescription" />
 
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_20sdp"
-        android:hint="@string/enter_your_email_address"
-        android:textAppearance="@style/ta_body"
+        android:layout_marginTop="@dimen/_30sdp"
         android:autofillHints="emailAddress"
+        android:hint="@string/enter_your_email_address"
         android:inputType="textEmailAddress"
+        android:textAppearance="@style/ta_body"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etName" />
 
-    <EditText
-        android:id="@+id/etPassword"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_30sdp"
+        app:passwordToggleEnabled="true"
         android:hint="@string/enter_a_strong_password"
-        android:textAppearance="@style/ta_body"
-        android:autofillHints="password"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:hintTextColor="@color/grey"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/etEmail"
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <com.google.android.material.button.MaterialButton
+        <EditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="password"
+            android:background="@color/white"
+            android:paddingHorizontal="0dp"
+            android:gravity="start"
+            android:paddingStart="@dimen/_1sdp"
+            android:paddingEnd="@dimen/_1sdp"
+            android:layout_weight="1"
+            android:inputType="textPassword"
+            android:textAppearance="@style/ta_body" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+<com.google.android.material.button.MaterialButton
         android:id="@+id/btnSignup"
         style="@style/btn_style"
         android:layout_width="0dp"
@@ -84,6 +97,6 @@
         android:textAppearance="@style/ta_heading"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
