--- a/app/src/main/res/values/Styles.xml
+++ b/app/src/main/res/values/Styles.xml
@@ -4,7 +4,7 @@
     <style name="ta62sp">
         <item name="android:textSize">62sp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="fontFamily">@font/roboto_regular</item>
     </style>
 
     <style name="ta48sp" parent="ta62sp">
@@ -28,6 +28,24 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="ta_body_grey" parent="ta_body">
+        <item name="android:textColor">@color/grey</item>
+    </style>
+
+    <style name="ta_10sp">
+        <item name="android:textSize">@dimen/_10ssp</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="ta_10sp_grey" parent="ta_10sp">
+        <item name="android:textColor">@color/grey</item>
+    </style>
+
+    <style name="ta_10sp_bold" parent="ta_10sp">
+        <item name="android:fontFamily">@font/roboto_bold</item>
+    </style>
+
     <style name="taH3_B_C_lightblue" parent="ta48sp">
         <item name="fontFamily">@font/roboto_bold</item>
         <item name="android:textColor">@color/lightblue</item>
@@ -41,7 +59,7 @@
         <item name="fontFamily">@font/roboto_bold</item>
     </style>
     <style name="taH5_R_lightblue" parent="ta_heading">
-        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
         <item name="android:textColor">@color/lightblue</item>
     </style>
     <style name="ta_heading_grey" parent="ta_heading">
