--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,8 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="Theme.ProjectManager.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.ProjectManager.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
