--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,30 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/MainFragment">
+
     <fragment
-        android:id="@+id/mainFragment"
+        android:id="@+id/MainFragment"
         android:name="com.example.projectmanager.login.ui.MainFragment"
-        android:label="MainFragment" >
+        android:label="@string/home"
+        tools:layout="@layout/fragment_main">
+
         <action
-            android:id="@+id/action_mainFragment_to_signupFragment"
-            app:destination="@id/signupFragment" />
+            android:id="@+id/action_MainFragment_to_SignUpFragment"
+            app:destination="@id/SignUpFragment" />
         <action
-            android:id="@+id/action_mainFragment_to_loginFragment"
+            android:id="@+id/action_MainFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/SignUpFragment"
+        android:name="com.example.projectmanager.login.ui.SignUpFragment"
+        android:label="@string/sign_up"
+        tools:layout="@layout/fragment_signup">
+
+        <action
+            android:id="@+id/action_SignUpFragment_to_MainFragment"
+            app:destination="@id/MainFragment" />
+        <action
+            android:id="@+id/action_SignUpFragment_to_loginFragment2"
             app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.projectmanager.login.ui.LoginFragment"
-        android:label="fragment_login"
+        android:label="@string/login"
         tools:layout="@layout/fragment_login" />
-    <fragment
-        android:id="@+id/signupFragment"
-        android:name="com.example.projectmanager.login.ui.SignupFragment"
-        android:label="fragment_sign_up"
-        tools:layout="@layout/fragment_sign_up" >
-        <action
-            android:id="@+id/action_signupFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-    </fragment>
 </navigation>
