--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_30sdp"
         android:layout_marginHorizontal="@dimen/_20sdp"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:text="@string/enter_you_email_and_password_to_login"
         android:textAppearance="@style/ta_body"
         app:layout_constraintEnd_toEndOf="parent"
