--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="Dark_grey">#4A4A4A</color>
     <color name="cayan">#009688</color>
     <color name="lightblue">#0090FF</color>
+    <color name="error_color">#F72400</color>
 </resources>
