--- a/app/src/main/res/drawable/bg_gr_stroke_white_corner_rds.xml
+++ b/app/src/main/res/drawable/bg_gr_stroke_white_corner_rds.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:angle="360"
-        android:startColor="@color/teal_200"
-        android:endColor="@color/teal_700"
+    <gradient
+        android:angle="360"
         android:centerColor="#009688"
-        android:type="linear">
-    </gradient>
-    <corners android:radius="@dimen/_7sdp"/>
+        android:endColor="@color/teal_700"
+        android:startColor="@color/teal_200"
+        android:type="linear"></gradient>
+    <corners android:radius="@dimen/_7sdp" />
 
 </shape>
